fixed the font size and spacing

--- a/scss/components/list.scss
+++ b/scss/components/list.scss
@@ -13,6 +13,7 @@ ul.feature-lists {
   font-size: 20px;
   text-align: center;
   font-weight: 700;
+  margin-top: 15px;
   a {
     text-decoration: underline;
     color: black;
