--- a/scss/pages/page10.scss
+++ b/scss/pages/page10.scss
@@ -11,7 +11,7 @@
 
     h1 {
       color: white;
-      font-size: 26px;
+      font-size: 30px;
       line-height: 1.5;
     }
     p {
