--- a/scss/pages/page11.scss
+++ b/scss/pages/page11.scss
@@ -9,7 +9,7 @@
       align-items: center;
     }
     &__image {
-      width: 58%;
+      width: 62%;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -20,7 +20,7 @@
       }
     }
     &__content {
-      width: 42%;
+      width: 38%;
       padding: 20px;
       height: 100%;
       font-size: 10px;
