--- a/scss/pages/page12.scss
+++ b/scss/pages/page12.scss
@@ -49,7 +49,7 @@
         width: 24%;
         background: #ffe8c8;
         padding: 20px 10px;
-        font-size: 12px;
+        font-size: 10px;
       }
     }
   }
