--- a/scss/pages/page5.scss
+++ b/scss/pages/page5.scss
@@ -41,7 +41,7 @@
         }
         &__subtitle {
           font-size: 20px;
-          font-weight: 700;
+          font-weight: 900;
           line-height: 1.5;
         }
         p {
