--- a/scss/pages/page7.scss
+++ b/scss/pages/page7.scss
@@ -52,7 +52,7 @@
             font-weight: 400;
             color: $mint;
             text-align: center;
-            font-size: 16px;
+            font-size: 14px;
             margin: 0;
           }
           &.row__header {
